--- a/polybar/preview.ini
+++ b/polybar/preview.ini
@@ -228,6 +228,8 @@ tray-padding = 0
 ; Scale factor for tray clients
 tray-scale = 1.0
 
+tray-output = HDMI-1-1
+
 ; Restack the bar window and put it above the
 ; selected window manager's root
 ;
