so many things that just work :()

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,16 +29,11 @@ set-option -g renumber-windows on
 
 bind r source-file ~/.tmux.conf
 
-set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-set -g @catppuccin_left_separator ""
-set -g @catppuccin_right_separator ""
 
 
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+
 set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
@@ -70,4 +65,69 @@ bind % split-window -h -c "#{pane_current_path}"
 # bind C-v run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
 
 
+#######################################################################
+
+# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux#v2.1.2' 
+
+# run ~/.tmux/plugins/tmux/catppuccin.tmux
+
+set -g @catppuccin_flavour 'mocha'
+
+set -g @catppuccin_window_status_style "rounded"
+# set -ogq @catppuccin_window_text " #T #{pane_current_path}"
+# set -ogq @catppuccin_window_current_text " #I #T #{pane_current_path}"
+
+# Pane styling options
+set -ogq @catppuccin_pane_status_enabled "yes" # set to "yes" to enable
+set -ogq @catppuccin_pane_border_status "yes" # set to "yes" to enable
+set -ogq @catppuccin_pane_border_style "fg=#{@thm_overlay_0}"
+set -ogq @catppuccin_pane_active_border_style "##{?pane_in_mode,fg=#{@thm_lavender},##{?pane_synchronized,fg=#{@thm_mauve},fg=#{@thm_lavender}}}"
+set -ogq @catppuccin_pane_left_separator "█"
+set -ogq @catppuccin_pane_middle_separator "█"
+set -ogq @catppuccin_pane_right_separator "█"
+set -ogq @catppuccin_pane_color "#{@thm_green}"
+set -ogq @catppuccin_pane_background_color "#{@thm_surface_0}"
+set -ogq @catppuccin_pane_default_text "##{b:pane_current_path}"
+set -ogq @catppuccin_pane_default_fill "number"
+set -ogq @catppuccin_pane_number_position "left" # right, left
+
+
+# set -ogq @catppuccin_window_status_style "basic" # basic, rounded, slanted, custom, or none
+set -ogq @catppuccin_window_text_color "#{@thm_surface_0}"
+set -ogq @catppuccin_window_number_color "#{@thm_overlay_2}"
+
+# set -gF @ggg "#[fg=#{@catppuccin_status_application_icon_bg}]#{@_ctp_connect_style}#{@catppuccin_status_left_separator}#[fg=#{@catppuccin_status_application_icon_fg}],bg=#{@catppuccin_status_application_icon_bg}]#{E:pane_current_command}"
+
+set -ogq @catppuccin_window_text " #{s|$HOME|~|:pane_current_path} #[fg=#{@catppuccin_status_application_icon_bg}]#{@_ctp_connect_style}#{@catppuccin_status_left_separator}#[fg=#{@catppuccin_status_application_icon_fg},bg=#{@catppuccin_status_application_icon_bg}]#{E:pane_current_command}"
+set -ogq @catppuccin_window_number "#I"
+set -ogq @catppuccin_window_current_text_color "#{@thm_surface_1}"
+set -ogq @catppuccin_window_current_number_color "#{@thm_mauve}"
+set -ogq @catppuccin_window_current_text " #{s|$HOME|~|:pane_current_path} #[fg=#{@catppuccin_status_application_icon_bg}]#{@_ctp_connect_style}#{@catppuccin_status_left_separator}#[fg=#{@catppuccin_status_application_icon_fg},bg=#{@catppuccin_status_application_icon_bg}]#{E:pane_current_command}"
+set -ogq @catppuccin_window_current_number "#I"
+set -ogq @catppuccin_window_number_position "left"
+set -ogq @catppuccin_window_flags "icon" # none, icon, or text
+set -ogq @catppuccin_window_flags_icon_last " 󰖰" # -
+set -ogq @catppuccin_window_flags_icon_current " 󰖯" # *
+set -ogq @catppuccin_window_flags_icon_zoom " 󰁌" # Z
+set -ogq @catppuccin_window_flags_icon_mark " 󰃀" # M
+set -ogq @catppuccin_window_flags_icon_silent " 󰂛" # ~
+set -ogq @catppuccin_window_flags_icon_activity " 󱅫" # #
+set -ogq @catppuccin_window_flags_icon_bell " 󰂞" # !
+# Matches icon order when using `#F` (`#!~[*-]MZ`)
+set -ogq @catppuccin_window_flags_icon_format "##{?window_activity_flag,#{E:@catppuccin_window_flags_icon_activity},}##{?window_bell_flag,#{E:@catppuccin_window_flags_icon_bell},}##{?window_silence_flag,#{E:@catppuccin_window_flags_icon_silent},}##{?window_active,#{E:@catppuccin_window_flags_icon_current},}##{?window_last_flag,#{E:@catppuccin_window_flags_icon_last},}##{?window_marked_flag,#{E:@catppuccin_window_flags_icon_mark},}##{?window_zoomed_flag,#{E:@catppuccin_window_flags_icon_zoom},}"
+
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+
+#######################################################################
+
+set -g @plugin 'tmux-plugins/tpm'
+
 run '~/.tmux/plugins/tpm/tpm'
+
