--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -132,6 +132,10 @@ type = internal/battery
 ; This is useful in case the battery never reports 100% charge
 full-at = 95
 
+; format-low once this charge percentage is reached
+; Default: 10
+; New in version 3.6.0
+low-at = 35
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
 battery = BAT0
@@ -161,7 +165,7 @@ time-format = %H:%M
 format-charging = <label-charging>
 format-charging-prefix = " "
 format-charging-background = ${color.background-alt}
-format-charging-foreground = ${color.foreground}
+format-charging-foreground = #02ca12
 format-charging-overline = ${color.background}
 format-charging-underline = ${color.background}
 format-charging-padding = 2
@@ -191,6 +195,23 @@ format-full-overline = ${color.background}
 format-full-underline = ${color.background}
 format-full-padding = 2
 
+; Format used when battery level drops to low-at
+; If not defined, format-discharging is used instead.
+; Available tags:
+;   <label-low>
+;   <animation-low>
+;   <bar-capacity>
+;   <ramp-capacity>
+; New in version 3.6.0
+format-low = <label-low>
+format-low-prefix = " "
+format-low-background = #aa0212
+format-low-foreground = #fff
+format-low-overline = ${color.background}
+format-low-underline = ${color.background}
+format-low-padding = 2
+
+
 ; Available tokens:
 ;   %percentage% (default)
 ;   %time%
@@ -206,6 +227,14 @@ label-discharging = %percentage%%
 ; Available tokens:
 ;   %percentage% (default)
 label-full = Full
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current discharge rate in watts)
+; New in version 3.6.0
+label-low = BATTERY LOW %percentage%%
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
