--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -130,8 +130,11 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=10;4"
-font-1 = "feather:size=10;3"
+; font-0 = "Iosevka Nerd Font:size=10;4"
+; font-1 = "feather:size=10;3"
+
+; font-0 = "Iosevka Nerd Font:size=15;4"
+; font-1 = "feather:size=15;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -207,7 +210,10 @@ tray-scale = 1.0
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi = 
+; Set this to 0 to let polybar calculate the dpi from the screen size.
+dpi = 0
+; dpi-x = 0
+; dpi-y = 0
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
