--- a/polybar/preview.ini
+++ b/polybar/preview.ini
@@ -62,7 +62,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 35
+height = ${env:POLYBAR_HEIGHT:}
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -134,6 +134,9 @@ module-margin-right = 0
 font-0 = "Iosevka Nerd Font:size=10;4"
 ; font-0 = "JetBrainsMono Nerd Font:size=10;4"
 font-1 = "feather:size=10;3"
+
+; font-0 = "Iosevka Nerd Font:size=13;4"
+; font-1 = "feather:size=13;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -210,7 +213,7 @@ tray-position = right
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 16
+tray-maxsize = ${env:POLYBAR_TRAY_MAXSIZE:}
 
 ; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
@@ -243,7 +246,8 @@ tray-output = HDMI-1-1
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi = 
+; dpi = 144
+dpi = ${env:POLYBAR_DPI:}
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
