--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,7 +99,9 @@ set -ogq @catppuccin_window_number_color "#{@thm_overlay_2}"
 
 # set -gF @ggg "#[fg=#{@catppuccin_status_application_icon_bg}]#{@_ctp_connect_style}#{@catppuccin_status_left_separator}#[fg=#{@catppuccin_status_application_icon_fg}],bg=#{@catppuccin_status_application_icon_bg}]#{E:pane_current_command}"
 
-set -ogq @catppuccin_window_text " #{s|$HOME|~|:pane_current_path} #[fg=#{@catppuccin_status_application_icon_bg}]#{@_ctp_connect_style}#{@catppuccin_status_left_separator}#[fg=#{@catppuccin_status_application_icon_fg},bg=#{@catppuccin_status_application_icon_bg}]#{E:pane_current_command}"
+# set -ogq @catppuccin_window_text " #{s|$HOME|~|:pane_current_path} #[fg=#{@catppuccin_status_application_icon_bg}]#{@_ctp_connect_style}#{@catppuccin_status_left_separator}#[fg=#{@catppuccin_status_application_icon_fg},bg=#{@catppuccin_status_application_icon_bg}]#{E:pane_current_command}"
+# #11111b #eba0ac
+set -ogq @catppuccin_window_text " #{s|$HOME|~|:pane_current_path} #[fg=#{@thm_overlay_2}]#{@_ctp_connect_style}#{@catppuccin_status_left_separator}#[fg=#{@catppuccin_status_application_icon_fg},bg=#{@thm_overlay_2}]#{E:pane_current_command}"
 set -ogq @catppuccin_window_number "#I"
 set -ogq @catppuccin_window_current_text_color "#{@thm_surface_1}"
 set -ogq @catppuccin_window_current_number_color "#{@thm_mauve}"
@@ -107,7 +109,7 @@ set -ogq @catppuccin_window_current_text " #{s|$HOME|~|:pane_current_path} #[fg=
 set -ogq @catppuccin_window_current_number "#I"
 set -ogq @catppuccin_window_number_position "left"
 set -ogq @catppuccin_window_flags "icon" # none, icon, or text
-set -ogq @catppuccin_window_flags_icon_last " 󰖰" # -
+set -ogq @catppuccin_window_flags_icon_last "" # -
 set -ogq @catppuccin_window_flags_icon_current " 󰖯" # *
 set -ogq @catppuccin_window_flags_icon_zoom " 󰁌" # Z
 set -ogq @catppuccin_window_flags_icon_mark " 󰃀" # M
